--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "babel-polyfill": "^6.26.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.16.3",
     "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^5.1.2",
     "request": "^2.88.0"
   },
   "devDependencies": {
