--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
@@ -21,12 +21,14 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ws": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
