--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "webpack": "^4.5.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
